--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -94,6 +94,4 @@ block content
       #go-wash.button 欧耶洗车啦
   script.
     var services = !{JSON.stringify(services)};
-    facade({
-      entry: "ccmeiche/pages/home.js"
-    });
+  +facade("home")
