--- a/public/jade/layout.jade
+++ b/public/jade/layout.jade
@@ -1,14 +1,23 @@
 - var sitename = "CC美车"
+mixin facade(name)
+  if env == product
+  script(src="/dest/pages/#{name}.js")
+  script.
+    facade({
+      entry: "ccmeiche@#{package_version}/pages/#{name}.js"
+    });
 doctype html
 html
   head
     title= title || sitename
-    script(src="/neurons/neuron/7.0.0/neuron.js")
-    script(src="/neurons/config.js")
-    script.
-        neuron.config({
+
+    if env !== "product"
+      script(src="/neurons/neuron/7.0.0/neuron.js")
+      script(src="/neurons/config.js")
+      script.
+          neuron.config({
             path:"/neurons"
-        });
+          });
     link(href="/css/app.css", rel="stylesheet")
     meta(name="format-detection" content="telephone=no")
     meta(name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, initial-scale=1")
