rebundle scripts and add init scripts

--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -3,7 +3,6 @@ block content
 
   .blank
 
-
   .menu
 
   .aside
@@ -22,7 +21,7 @@ block content
       li.item
         a(href="/help") 帮助
         i.icon.icon-help
-    .button(href="/logout") 退出登录
+    a.button(href="/logout") 退出登录
 
   .overlay
 
