--- a/public/jade/login.jade
+++ b/public/jade/login.jade
@@ -15,6 +15,4 @@ block content
   script.
     var access_token = '#{access_token}';
     var openid = '#{openid}';
-    facade({
-      entry:"ccmeiche/pages/login.js"
-    });
+  +facade("login")
