--- a/public/jade/myorders.jade
+++ b/public/jade/myorders.jade
@@ -47,7 +47,4 @@ block content
     +section("进行中","doing")
   +section("已完成","done")
 
-  script.
-    facade({
-      entry: "ccmeiche/pages/myorders.js"
-    });
+  +facade('myorders')
