--- a/public/jade/order.jade
+++ b/public/jade/order.jade
@@ -35,6 +35,4 @@ block content
 
   script.
     var order = !{JSON.stringify(order)}
-    facade({
-      entry: "ccmeiche/pages/order.js"
-    });
+  +facade('order');
