fix logout button style

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -269,7 +269,10 @@ body.openmenu {
   margin-bottom: 30px;
 }
 .aside .menus {
-  margin-bottom: 100px;
+  margin-bottom: 40px;
+}
+.aside .button {
+  text-decoration: none;
 }
 .aside .item {
   position: relative;
