--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -216,7 +216,9 @@ body
     font-size: 16px
     margin-bottom: 30px
   .menus
-    margin-bottom: 100px
+    margin-bottom: 40px
+  .button
+    text-decoration: none
   .item
     position: relative
     a
