--- a/public/jade/layout.jade
+++ b/public/jade/layout.jade
@@ -44,7 +44,7 @@ html
         script.
             var user = {
               cars: !{JSON.stringify(user.cars||[])},
-              phone: #{user.phone},
+              phone: "#{user.phone}",
               promo: !{JSON.stringify(user.promo||[])},
               credit: #{user.credit || 0},
             };
