地址输入处使用历史地址

--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -86,7 +86,7 @@ block content
         input#address.input(data-pattern="/api/v1/location/suggestion/{q}")
         i.icon
       .carpark
-        input.input(placeholder="具体位置 如B215车位")
+        input#carpark.input(placeholder="具体位置 如B215车位")
       .note 注：一地址一订单，其他地址请另行下单
 
     .section
