--- a/public/jade/layout.jade
+++ b/public/jade/layout.jade
@@ -43,6 +43,7 @@ html
     if user && config.service == "user"
         script.
             var user = {
+              addresses: !{JSON.stringify(user.addresses||[])},
               cars: !{JSON.stringify(user.cars||[])},
               phone: "#{user.phone}",
               promo: !{JSON.stringify(user.promo||[])},
