--- a/public/jade/breakages.jade
+++ b/public/jade/breakages.jade
@@ -1,7 +1,7 @@
 - var breakage = order && order.breakage || -1;
 ul.breakages
   for i in [1,2,3,4,5,6,7,8,9,10]
-    li(class=["breakage","breakage-#{i}", i == breakage ? "active" : ""],data-index="#{i}")
+    li(class=["breakage","breakage-#{i}", (breakage.indexOf(i + "") !== -1) ? "active" : ""],data-index="#{i}")
       if i == 1
         include ../img/breakages/icon-1.svg
       else if i == 2
