--- a/admin/views/layout.jade
+++ b/admin/views/layout.jade
@@ -3,12 +3,14 @@ html
   head
     meta(charset="utf-8")
     meta(name="viewport",content="width=device-width, initial-scale=1.0")
-    title= title
+    title= title + " - CC美车管理后台"
     link(rel="stylesheet",href="css/bootstrap.min.css")
     link(rel="stylesheet",href="font-awesome/css/font-awesome.css")
     link(rel="stylesheet",href="css/animate.css")
-    link(rel="stylesheet",href="css/styles.css")
-  body.gray-bg
+    link(rel="stylesheet",href="css/style.css")
+  body(class="#{bodyClass}")
     block content
     script(src='js/jquery-1.10.2.js')
     script(src="js/bootstrap.min.js")
+    script(src="js/moment.min.js")
+    block scripts
