--- a/admin/views/worker.jade
+++ b/admin/views/worker.jade
@@ -21,6 +21,9 @@ block content
       background-color: #18a689 !important;
       color: #fff !important
     }
+    .selected td a{
+      color: #fff !important
+    }
   #wrapper
     nav.navbar-default.navbar-static-side(role='navigation')
       .sidebar-collapse
