--- a/admin/views/layout.jade
+++ b/admin/views/layout.jade
@@ -1,16 +1,45 @@
-doctype html
-html
-  head
-    meta(charset="utf-8")
-    meta(name="viewport",content="width=device-width, initial-scale=1.0")
-    title= title + " - CC美车管理后台"
-    link(rel="stylesheet",href="css/bootstrap.min.css")
-    link(rel="stylesheet",href="font-awesome/css/font-awesome.css")
-    link(rel="stylesheet",href="css/animate.css")
-    link(rel="stylesheet",href="css/style.css")
-  body(class="#{bodyClass}")
-    block content
-    script(src='js/jquery-1.10.2.js')
-    script(src="js/bootstrap.min.js")
-    script(src="js/moment.min.js")
-    block scripts
+extends blank-layout
+
+block content
+  style.
+    .selected td{
+      background-color: #18a689 !important;
+      color: #fff !important
+    }
+  #wrapper
+    nav.navbar-default.navbar-static-side(role='navigation')
+      .sidebar-collapse
+        ul#side-menu.nav
+          li.nav-header
+            .dropdown.profile-element
+              span
+                img.img-circle(alt='image', src='img/profile_small.jpg')
+              a.dropdown-toggle(data-toggle='dropdown', href='#')
+                span.clear
+                  span.block.m-t-xs
+                    strong.font-bold #{user.username}
+                  a.text-muted.text-xs.block(href="/logout") 登出
+            .logo-element
+              | IN+
+          li(class=[title=="车工管理"?"active":""])
+            a(href='/worker')
+              i.fa.fa-group
+              span.nav-label 车工
+          li(class=[title=="用户查询"?"active":""])
+            a(href='/user')
+              i.fa.fa-child
+              span.nav-label 用户
+          li(class=[title=="订单查询"?"active":""])
+            a(href='/order')
+              i.fa.fa-cny
+              span.nav-label 订单
+    #page-wrapper.gray-bg.dashbard-1
+      .row.wrapper.border-bottom.white-bg.page-heading
+        .col-lg-10
+          h2= title
+      .row
+        .col-lg-12
+          .ibox.float-e-margins
+            .ibox-title
+            .ibox-content
+              block main
