--- a/admin/views/order.jade
+++ b/admin/views/order.jade
@@ -1,84 +1,30 @@
 extends layout
 
-mixin datatable(data, keys)
-  table.table.table-striped.table-bordered.table-hover.dataTables-example
+block main
+  table#order-table.table.table-striped.table-bordered.table-hover
     thead
       tr
-        each field,title in keys
-          th #{title}
-    tbody
-      each row in data
-        tr(data-id="row['_id']")
-          each field,title in keys
-            - var field = keys[title]
-            - console.log(field);
-            td #{row[field]}
-
-
-block content
-  style.
-    .selected td{
-      background-color: #18a689 !important;
-      color: #fff !important
-    }
-  #wrapper
-    nav.navbar-default.navbar-static-side(role='navigation')
-      .sidebar-collapse
-        ul#side-menu.nav
-          li.nav-header
-            .dropdown.profile-element
-              span
-                img.img-circle(alt='image', src='img/profile_small.jpg')
-              a.dropdown-toggle(data-toggle='dropdown', href='#')
-                span.clear
-                  span.block.m-t-xs
-                    strong.font-bold #{user.username}
-                  a.text-muted.text-xs.block(href="/logout") 登出
-            .logo-element
-              | IN+
-          li
-            a(href='/worker')
-              i.fa.fa-group
-              span.nav-label 车工
-          li
-            a(href='/user')
-              i.fa.fa-child
-              span.nav-label 用户
-          li.active
-            a(href='/order')
-              i.fa.fa-cny
-              span.nav-label 订单
-    #page-wrapper.gray-bg.dashbard-1
-      .row.wrapper.border-bottom.white-bg.page-heading
-        .col-lg-10
-          h2= title
-      .row
-        .col-lg-12
-          .ibox.float-e-margins
-            .ibox-title
-            .ibox-content
-              table#example.table.table-striped.table-bordered.table-hover.dataTables-example
-                thead
-                  tr
-                    th 服务
-                    th 客户微信用户名
-                    th 车工姓名
-                    th 车辆
-                    th 车辆位置
-                    th 下单时间
-                    th 在途耗时
-                    th 洗车耗时
-                    th 状态
+        th 服务
+        th 客户微信用户名
+        th 车工姓名
+        th 车辆
+        th 车辆位置
+        th 下单时间
+        th 在途耗时
+        th 洗车耗时
+        th 状态
 block scripts
   script(src="js/plugins/dataTables/jquery.dataTables.js")
   script(src="js/plugins/dataTables/dataTables.bootstrap.js")
   script.
       $(document).ready(function() {
-        var table = $('#example').DataTable({
+        var table = $('#order-table').DataTable({
           "processing": true,
           "ajax": "/api/order",
           "columns": [
-            { "data": "service.title" },
+            {
+              "data": "service.title"
+            },
             {
               "data": null,
               render: function(data){
@@ -107,13 +53,15 @@ block scripts
             {
               "data": null,
               render: function(data){
-                return data.order_time ? moment(data.order_time).format('YYYY-MM-DD hh:mm:ss') : "--";
+                return data.order_time
+                  ? moment(data.order_time).format('YYYY-MM-DD hh:mm:ss')
+                  : "--";
               }
             },
             {
               "data": null,
               render: function(data){
-                var ms = new Date(data.arrive_time) - new Date(data.order_time);
+                var ms = (data.arrive_time ? new Date(data.arrive_time) : new Date()) - new Date(data.order_time);
                 var d = moment.duration(ms);
                 return ms ? (d.minutes() + "分钟" + d.seconds() + "秒") : "--";
               }
@@ -121,7 +69,7 @@ block scripts
             {
               "data": null,
               render: function(data){
-                var ms = new Date(data.finish_time) - new Date(data.arrive_time);
+                var ms = (data.finish_time ? new Date(data.finish_time) : new Date()) - new Date(data.arrive_time);
                 var d = moment.duration(ms);
                 return ms ? (d.minutes() + "分钟" + d.seconds() + "秒") : "--";
               }
