--- a/admin/views/user.jade
+++ b/admin/views/user.jade
@@ -1,76 +1,20 @@
 extends layout
 
-mixin datatable(data, keys)
-  table.table.table-striped.table-bordered.table-hover.dataTables-example
+block main
+  table#user-table.table.table-striped.table-bordered.table-hover
     thead
       tr
-        each field,title in keys
-          th #{title}
-    tbody
-      each row in data
-        tr(data-id="row['_id']")
-          each field,title in keys
-            - var field = keys[title]
-            - console.log(field);
-            td #{row[field]}
-
-
-block content
-  style.
-    .selected td{
-      background-color: #18a689 !important;
-      color: #fff !important
-    }
-  #wrapper
-    nav.navbar-default.navbar-static-side(role='navigation')
-      .sidebar-collapse
-        ul#side-menu.nav
-          li.nav-header
-            .dropdown.profile-element
-              span
-                img.img-circle(alt='image', src='img/profile_small.jpg')
-              a.dropdown-toggle(data-toggle='dropdown', href='#')
-                span.clear
-                  span.block.m-t-xs
-                    strong.font-bold #{user.username}
-                  a.text-muted.text-xs.block(href="/logout") 登出
-            .logo-element
-              | IN+
-          li
-            a(href='/worker')
-              i.fa.fa-group
-              span.nav-label 车工
-          li.active
-            a(href='/user')
-              i.fa.fa-child
-              span.nav-label 用户
-          li
-            a(href='/order')
-              i.fa.fa-cny
-              span.nav-label 订单
-    #page-wrapper.gray-bg.dashbard-1
-      .row.wrapper.border-bottom.white-bg.page-heading
-        .col-lg-10
-          h2= title
-      .row
-        .col-lg-12
-          .ibox.float-e-margins
-            .ibox-title
-            .ibox-content
-              table#example.table.table-striped.table-bordered.table-hover.dataTables-example
-                thead
-                  tr
-                    th 微信用户名
-                    th 手机号
-                    th 总单数
-                    th 总支付金额
-                    th 订单列表
+        th 微信用户名
+        th 手机号
+        th 总单数
+        th 总支付金额
+        th 订单列表
 block scripts
   script(src="js/plugins/dataTables/jquery.dataTables.js")
   script(src="js/plugins/dataTables/dataTables.bootstrap.js")
   script.
       $(document).ready(function() {
-        var table = $('#example').DataTable({
+        var table = $('#user-table').DataTable({
           "processing": true,
           "ajax": "/api/user",
           "columns": [
@@ -96,7 +40,7 @@ block scripts
             {
               data: null,
               "render":function(data){
-                return "<a target='_blank' href='/orders?user=" + data._id + "' >点击查看</a>"
+                return "<a target='_blank' href='/order?user=" + data._id + "' >点击查看</a>"
               }
             }
           ]
