--- a/admin/views/user.jade
+++ b/admin/views/user.jade
@@ -28,13 +28,13 @@ block scripts
             {
               data: null,
               "render": function(data){
-                return data.order_count || "--";
+                return data.order_count;
               }
             },
             {
               data: null,
               "render": function(data){
-                return data.order_price_count || "--"
+                return data.order_price_count
               }
             },
             {
