use formal wechat payment api

--- a/public/jade/layout.jade
+++ b/public/jade/layout.jade
@@ -36,6 +36,7 @@ html
             img.src = img_url;
         }
         var appConfig = {
+            env: "#{env}",
             qiniu_bucket: "#{config.qiniu_bucket}",
             qiniu_host: "#{config.qiniu_host}"
         }
