--- a/admin/views/order.jade
+++ b/admin/views/order.jade
@@ -78,7 +78,11 @@ block scripts
             {
               "data": null,
               render: function(data){
-                return data.status;
+                var status = data.status;
+                if(status == "cancel"){
+                  status = status + ":" + data.cancel_reason
+                }
+                return status;
               }
             }
           ]
