--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -16,7 +16,7 @@ block content
         a(href="/myinfos") 我的信息
         i.icon.icon-info
       li.item
-        a(href="/recharge") 充值
+        a(href="/wechat/recharge?showwxpaytitle=1") 充值
         i.icon.icon-recharge
       li.item
         a(href="/help") 帮助
