--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -45,7 +45,7 @@ block content
               .arrow
                 .icon
         if !user.cars || user.cars.length < 5
-          .add
+          .add.addcar
             i.icon-add
             | 添加车辆
     .section
