--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -706,6 +706,25 @@ body
         padding: 5px
         border-bottom: 1px solid orange
         color: grey
+  .addaddress-panel
+    background-color: rgb(240, 240, 240)
+    .title
+      text-align: center
+      font-size: 19px
+      padding: 14px 0 11px 0
+    .input-row
+      position: relative
+    .icon-location
+      @extend $icon
+      background-position: 0 -160px
+    .input
+      width: 100%
+      border: 1px solid rgb(240, 240, 240)
+      border-left: 2px solid orange
+    .button-wrap
+      padding-top: 40px
+      padding-bottom: 33px
+
 
 #order
   background-image: none
