--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -28,7 +28,7 @@ body
   width: 100%
   color: #fff
   background-color: orange
-  background-image: linear-gradient(orange,deeporange)
+  background-image: linear-gradient(215deg,orange,deeporange)
   background-repeat: no-repeat
   &.openmenu
     position: fixed
@@ -305,9 +305,11 @@ body
     right: 0
     img
       display: block
+      height: 105px
+      width: auto
 
 .container
-  width: 260px
+  width: 82%
   margin: 0 auto
 
 #home
@@ -318,6 +320,10 @@ body
     line-height: 40px
     text-align: center
     font-size: 20px
+  .go-wash-section
+    padding-bottom: 15px
+    .button
+      margin-bottom: 0
   .section
     h2
       padding: 15px 0
@@ -460,11 +466,11 @@ body
       float: right
       width: 100px
       .icon
-        background-image: url("../img/checkbox.png");
-        width: 26px;
-        height: 27px;
-        display: block;
-        float: right;
+        background-image: url("../img/checkbox.png")
+        width: 26px
+        height: 27px
+        display: block
+        float: right
         margin-right: 8px
         position: relative
         top: 3px
@@ -528,7 +534,7 @@ body
     font-size: 14px
     height: 25px
     line-height: 25px
-    padding-left: 30px
+    padding: 7px 0 7px 30px
     overflow: hidden
   .packup
     border-bottom: 0
