--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -89,7 +89,7 @@ block content
         input#carpark.input(placeholder="具体位置 如B215车位")
       .note 注：一地址一订单，其他地址请另行下单
 
-    .section
+    .section.go-wash-section
       #go-wash.button 欧耶洗车啦
   script.
     var services = !{JSON.stringify(services)};
