--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -41,7 +41,7 @@ block content
                       .detail
                         .type #{car.type}#{car.color}
                         .number #{car.number}
-            td
+            td.arrow-cell
               .arrow
                 .icon
         if !user.cars || user.cars.length < 5
