--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -48,10 +48,11 @@ body
 
 .input
   font-size: 14px
-  border: 1px solid light-grey
+  border: none
   border-left: 2px solid orange
   text-align: right
   padding-right: 18px
+  padding-left: 10px
   box-sizing: border-box
   height: 40px
 
@@ -90,10 +91,12 @@ body
     background-image: url("../img/close-btn.png")
     position: absolute
     background-size: 19px 19px
-    right: 12px
-    top: 12px
-    width: 19px
-    height: 19px
+    right: 2px
+    top: 3px
+    width: 32px
+    height: 32px
+    background-repeat: no-repeat
+    background-position: 7px 6px
   .choices
     padding: 50px 14px 36px 14px
     clearfix()
@@ -297,6 +300,7 @@ body
       .title
         padding-top: 30px
         font-size: 18px
+        margin-bottom: 6px
       .desc
         font-size: 12px
   .camera
@@ -339,8 +343,8 @@ body
         border-bottom: 1px solid orange
         width: 100%
         position: relative
-        .cars-cell
-          width: 200px
+        .arrow-cell
+          width: 60px
         .arrow
           position: relative
           float: right
@@ -484,11 +488,15 @@ body
   .payment
     margin-top: 8px
     padding: 3px
-    background-color: rgb(217,219,80)
+    background-color: rgb(218,222,61)
     .inner
       padding-top: 8px
       border: 1px solid #fff
       text-align: center
+      .num
+        font-size: 30px
+        line-height: 1
+        padding: 8px
   // 地址
   .address
     margin-bottom: 17px
