--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -78,7 +78,7 @@ body
 .swipe-container
   z-index: 20
   .swipe-inner
-    background-color: deeporange
+    background-image: linear-gradient(215deg,orange,deeporange)
 
 .popselect
   position: fixed
