update admin jade

--- a/admin/views/user.jade
+++ b/admin/views/user.jade
@@ -21,7 +21,7 @@ block scripts
             {
               data: null,
               "render": function(data){
-                return (data.wechat_info && data.wechat_info.name) ? data.wechat_info.name : "--"
+                return (data.wechat_info && data.wechat_info.nickname) ? data.wechat_info.nickname : "--"
               }
             },
             { "data": "phone"},
