--- a/admin/views/worker.jade
+++ b/admin/views/worker.jade
@@ -53,7 +53,7 @@ block scripts
           {
             data: null,
             render: function(data){
-              return (data.wechat_info && data.wechat_info.name) || "--"
+              return (data.wechat_info && data.wechat_info.nickname) || "--"
             }
           },
           {
