--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -845,6 +845,10 @@ body
     border: 1px solid white
     path,ellipse
       stroke: white
+    svg
+      position: relative
+      top: -1px
+      left: -1px
     &.active
       background-color: pink
       border: 1px solid pink
